# Track-My-Package

./: .gitignore
backend/: .env.template  docker-compose.yml  initialize_main.py  main.py  pyproject.toml  setup.cfg
backend/api/v1/: urls.py
backend/common/: aftership_client.py  app_settings.py  async_http.py  base_model.py  base_repo.py  base_repo_es_wrapper.py  choice.py  decorators.py  error_messages.py  es_data_parser.py  int_choice.py  schema.py  success_messages.py  test_util.py  user_session_auth_dep.py  utils.py
backend/delivery_client/: base_delivery_client.py  bluedart_client.py  delhivery_client.py  ecom_express_client.py  fedex_client.py
backend/my_project_poc/tests/: test_pytest_es_poc.py
backend/notifications/interactors/: notification_interactor.py
backend/parcel/: model.py  models.py  parcel.py  schema.py  urls.py
backend/parcel/interactors/: parcel_interactor.py
backend/parcel/interactors/repos/: parcel_repo.py
backend/parcel/repos/: parcel_repo.py
backend/parcel/schemas/: request.py  response.py
backend/parcel/views/: parcel_view.py
backend/services/: auth_session_service.py  bluedart_service.py  delhivery_service.py  ecom_express_service.py  es_service.py  fedex_service.py  redis_service.py
backend/staff_user/: urls.py
backend/staff_user/interactors/: staff_user_interactor.py
backend/staff_user/repos/: staff_user_repo.py
backend/staff_user/views/: es_view.py
backend/user/: model.py  urls.py
backend/user/interactors/: user_interactor.py
backend/user/repos/: user_repo.py
backend/user/repos/tests/: test_user_repo.py
backend/user/schemas/: request.py  response.py
backend/user/views/: user_token_view.py  user_view.py
frontend/: package.json
frontend/web/: package.json
frontend/web/parcel-tracker/: .env.template  output.js  package.json  vue.config.js
frontend/web/parcel-tracker/src/: App.vue  main.js
frontend/web/parcel-tracker/src/components/: Menu.vue  PageNotFound.vue  SocialLogin.vue
frontend/web/parcel-tracker/src/config/: google_oauth.js
frontend/web/parcel-tracker/src/parcels/: index.js
frontend/web/parcel-tracker/src/router/: index.js
frontend/web/parcel-tracker/src/store/: index.js
frontend/web/parcel-tracker/src/user/: index.js
frontend/web/parcel-tracker/src/views/: Callback.vue  Dashboard.vue  Home.vue  Login.vue  Parcel.vue  ParcelsList.vue  SignUp.vue
static/: index.html
static/css/: app.a354e150.css
static/js/: app.b11736d4.js  app.b11736d4.js.map  chunk-vendors.a81242d0.js  chunk-vendors.a81242d0.js.map
